--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
       <h2>Payment & Confirmation</h2>
       <div class="summary" id="finalBreakdown">💰 Total Payment: ₹0</div>
       <p class="small">Please scan the UPI QR and upload payment screenshot with transaction ID.</p>
-      <img id="qr" src="YOUR_UPI_QR.png" alt="UPI QR code (replace image file)" />
+      <img id="qr" src="Diwali Party QR Code.jpg" alt="UPI QR code (replace image file)" />
       <input class="input" id="upiTxn" placeholder="UPI Transaction ID (e.g. TXN12345)" required>
       <input class="input" id="upiScreenshot" type="file" accept="image/*" required>
       <div class="controls">
@@ -406,3 +406,4 @@ calculateAndShow();
 </script>
 </body>
 </html>
+
