--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
         <div class="detail-pill">💑 Couple • ₹2500</div>
       </div>
     </div>
-    <div style="margin-top:12px" class="note">Table reservations: 4 — ₹12,000 · 8 — ₹22,000 · 10 — ₹25,000. On-spot charges may differ.</div>
+    <div style="margin-top:12px" class="note">NTOE : On-spot charges may differ.</div>
   </div>
 
   <form id="diwaliForm" novalidate>
@@ -406,4 +406,5 @@ calculateAndShow();
 </script>
 </body>
 </html>
+
 
