--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
 <header>
   <h1>✨ Diwali Night: A Night Under The Sky ✨</h1>
   <p><strong>Jaipur After Hours x The Forresta</strong></p>
-  <p class="header-note">📍 <a href="https://maps.app.goo.gl/V9sfvTeTSCVdNRBR9" target="_blank" rel="noopener">The Forresta : https://maps.app.goo.gl/V9sfvTeTSCVdNRBR9</a>  &nbsp; | &nbsp; 📅 17th October  &nbsp; | &nbsp; 👗 Ethnic</p>
+  <p class="header-note">📍 <a href="https://maps.app.goo.gl/V9sfvTeTSCVdNRBR9" target="_blank" rel="noopener">The Forresta, Jaipur</a>  &nbsp; | &nbsp; 📅 17th October  &nbsp; | &nbsp; 👗 Ethnic</p>
   <div class="sparkle" aria-hidden="true"></div>
 </header>
 
@@ -406,5 +406,6 @@ calculateAndShow();
 </script>
 </body>
 </html>
+
 
 
