--- a/index.html
+++ b/index.html
@@ -125,17 +125,22 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
 
     <!-- STEP 3: Payment -->
     <div class="step" id="step3">
-      <h2>Payment</h2>
-      <p class="small">Scan QR or UPI and upload screenshot.</p>
-      <input type="file" accept="image/*" id="screenshot" required>
-      <input class="input" id="upiTxn" placeholder="UPI Transaction ID" required>
-      <div class="summary">Total Amount: <span id="totalAmount">₹0</span></div>
-      <div class="controls">
-        <button type="button" class="btn secondary" id="back3">Back</button>
-        <button type="submit" class="btn" id="submitBtn">Submit</button>
-      </div>
-    </div>
-  </form>
+    <h2>Payment</h2>
+    <p class="small">Scan QR or UPI and upload screenshot.</p>
+  
+  <!-- QR Code Image -->
+  <img id="qr" src="Diwali Party QR Code.jpg" alt="Scan to pay via UPI">
+
+  <input type="file" accept="image/*" id="screenshot" required>
+  <input class="input" id="upiTxn" placeholder="UPI Transaction ID" required>
+  <div class="summary">Total Amount: <span id="totalAmount">₹0</span></div>
+  <div class="controls">
+    <button type="button" class="btn secondary" id="back3">Back</button>
+    <button type="submit" class="btn" id="submitBtn">Submit</button>
+  </div>
+</div>
+
+
 
   <div id="loadingOverlay"><div></div></div>
 
