--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
     <p class="small">Scan QR or UPI and upload screenshot.</p>
   
   <!-- QR Code Image -->
-  <img id="qr" src="Diwali Party QR Code.jpg" alt="Scan to pay via UPI">
+  <img id="qr" src="Diwali Party QR  Code.jpeg" alt="Scan to pay via UPI">
 
   <input type="file" accept="image/*" id="screenshot" required>
   <input class="input" id="upiTxn" placeholder="UPI Transaction ID" required>
