--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   --cream:#fdfaf7; --gold:#d8b384; --dark-gold:#b89263; --text:#2b2b2b; --border:#e9dfd2; --sparkle:rgba(255,215,150,0.55);
 }
 *{box-sizing:border-box}
-body{ font-family:Inter,system-ui,Arial,sans-serif; background:var(--cream); color:var(--text); margin:0; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;}
+body{ font-family:Inter,system-ui,Arial,sans-serif; background:var(--cream); color:var(--text); margin:0; }
 header{ text-align:center; background:linear-gradient(135deg,#fff5ea,#fdecd2); padding:56px 20px 32px; border-bottom:1px solid var(--border); position:relative; overflow:hidden;}
 header::before, header::after{ content:"🪔"; position:absolute; font-size:3.6rem; opacity:0.16; }
 header::before{ left:8%; top:14%; animation:float 5s ease-in-out infinite alternate; }
@@ -43,13 +43,6 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
 .btn:hover{ transform:translateY(-3px); box-shadow:0 6px 18px rgba(0,0,0,0.06); }
 .summary{ margin:14px auto 4px; font-weight:700; color:#7a4f34; }
 #qr{ width:200px; margin:14px auto; border-radius:8px; border:1px solid var(--border); display:block; }
-#successMsg{ display:none; background:#e8f8e3; color:#24562b; padding:12px; border-radius:10px; width:88%; margin:18px auto; font-weight:600; }
-.note{ font-size:.9rem; color:#7b6a5b; margin-top:6px; }
-.sparkle{ position:absolute; inset:0; pointer-events:none; }
-.sparkle span{ position:absolute; width:6px; height:6px; background:var(--sparkle); border-radius:50%; animation:spark 3s infinite ease-in-out; opacity:0; }
-@keyframes spark{ 0%,100%{ opacity:0; transform:translateY(0) scale(.8) } 50%{ opacity:1; transform:translateY(-8px) scale(1.2) } }
-@media (max-width:560px){ header h1{ font-size:1.8rem } .input, select, .person-fields{ width:94% } .detail-pill{ flex:1 } }
-
 #loadingOverlay{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.4);z-index:9999;justify-content:center;align-items:center;}
 #loadingOverlay div{width:60px;height:60px;border:6px solid #f3f3f3;border-top:6px solid #d8b384;border-radius:50%;animation:spin 1s linear infinite;}
 @keyframes spin{0%{transform:rotate(0deg)}100%{transform:rotate(360deg)}}
@@ -68,28 +61,25 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
 <header>
   <h1>✨ Diwali Night: A Night Under The Sky ✨</h1>
   <p><strong>Jaipur After Hours x The Forresta</strong></p>
-  <p class="header-note">📍 <a href="https://maps.app.goo.gl/V9sfvTeTSCVdNRBR9" target="_blank" rel="noopener">The Forresta, Jaipur</a>  &nbsp; | &nbsp; 📅 17th October  &nbsp; | &nbsp; 👗 Ethnic</p>
-  <div class="sparkle" aria-hidden="true"></div>
+  <p class="header-note">📍 <a href="https://maps.app.goo.gl/V9sfvTeTSCVdNRBR9" target="_blank">The Forresta, Jaipur</a>  &nbsp; | &nbsp; 📅 17th October  &nbsp; | &nbsp; 👗 Ethnic</p>
 </header>
 
 <div class="container">
-  <div class="details-box" role="region" aria-label="Event details">
+  <div class="details-box">
     <div style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
       <div>
-        <p style="margin:0 0 8px 0;"><strong>Not your usual Diwali — this is <span style="color:var(--dark-gold)">Jaipur After Hours</span></strong></p>
         <ul>
           <li>💃 Desi beats & elegant fits</li>
           <li>🔥 Fire dance floors</li>
           <li>🌌 Celebrate Diwali under the stars</li>
         </ul>
       </div>
-      <div class="details-grid" style="align-items:center">
+      <div class="details-grid">
         <div class="detail-pill">👨 Male Stag • ₹2000</div>
         <div class="detail-pill">👩 Female Stag • ₹1500</div>
         <div class="detail-pill">💑 Couple • ₹2500</div>
       </div>
     </div>
-    <div style="margin-top:12px" class="note">NOTE: On-spot charges may differ.</div>
   </div>
 
   <form id="diwaliForm" novalidate>
@@ -125,22 +115,18 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
 
     <!-- STEP 3: Payment -->
     <div class="step" id="step3">
-    <h2>Payment</h2>
-    <p class="small">Scan QR or UPI and upload screenshot.</p>
-  
-  <!-- QR Code Image -->
-  <img id="qr" src="Diwali Party QR Code.jpg" alt="Scan to pay via UPI">
-
-  <input type="file" accept="image/*" id="screenshot" required>
-  <input class="input" id="upiTxn" placeholder="UPI Transaction ID" required>
-  <div class="summary">Total Amount: <span id="totalAmount">₹0</span></div>
-  <div class="controls">
-    <button type="button" class="btn secondary" id="back3">Back</button>
-    <button type="submit" class="btn" id="submitBtn">Submit</button>
-  </div>
-</div>
-
-
+      <h2>Payment</h2>
+      <p class="small">Scan QR or UPI and upload screenshot.</p>
+      <img id="qr" src="Diwali Party QR Code.jpg" alt="Scan to pay via UPI">
+      <input type="file" accept="image/*" id="screenshot" required>
+      <input class="input" id="upiTxn" placeholder="UPI Transaction ID" required>
+      <div class="summary">Total Amount: <span id="totalAmount">₹0</span></div>
+      <div class="controls">
+        <button type="button" class="btn secondary" id="back3">Back</button>
+        <button type="submit" class="btn" id="submitBtn">Submit</button>
+      </div>
+    </div>
+  </form>
 
   <div id="loadingOverlay"><div></div></div>
 
@@ -154,129 +140,98 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
 </div>
 
 <script>
-let guests = [];
 let step = 1;
 
 function updateTotal() {
   let mainGender = document.getElementById('main_gender').value;
   let males = 0, females = 0;
+  if(mainGender==='Male') males++; else if(mainGender==='Female') females++;
 
-  if (mainGender === 'Male') males++;
-  else if (mainGender === 'Female') females++;
-
-  // loop through guest fields dynamically
   let guestElems = document.querySelectorAll('#guestsContainer .person-fields');
-  guestElems.forEach(g => {
+  guestElems.forEach(g=>{
     let gender = g.querySelector('.guestGender').value;
-    if (gender === 'Male') males++;
-    else if (gender === 'Female') females++;
+    if(gender==='Male') males++; else if(gender==='Female') females++;
   });
 
-  // calculate couples and remaining singles
-  let couples = Math.min(males, females);
-  let remainingMales = males - couples;
-  let remainingFemales = females - couples;
+  let couples = Math.min(males,females);
+  let remainingMales = males-couples;
+  let remainingFemales = females-couples;
+  let total = couples*2500 + remainingMales*2000 + remainingFemales*1500;
 
-  // calculate total amount
-  let total = (couples * 2500) + (remainingMales * 2000) + (remainingFemales * 1500);
-
-  // update UI
-  document.getElementById('totalAmount').innerText =
-    `💰 ₹${total} — Couples: ${couples}, Single Males: ${remainingMales}, Single Females: ${remainingFemales}`;
-
+  document.getElementById('totalAmount').innerText = `💰 ₹${total} — Couples: ${couples}, Single Males: ${remainingMales}, Single Females: ${remainingFemales}`;
   return total;
 }
 
-
-
 // Step navigation
-document.getElementById('next1').onclick = () => {
-  if(!document.getElementById('main_name').value || !document.getElementById('main_instagram').value || !document.getElementById('main_mobile').value || !document.getElementById('main_email').value || !document.getElementById('main_gender').value){
-    alert('Please fill all fields'); return;
-  }
-  step=2; showStep();
-  updateTotal();
+document.getElementById('next1').onclick = ()=>{ 
+  if(!document.getElementById('main_name').value || !document.getElementById('main_instagram').value || !document.getElementById('main_mobile').value || !document.getElementById('main_email').value || !document.getElementById('main_gender').value){ alert('Please fill all fields'); return; }
+  step=2; showStep(); updateTotal();
 };
 document.getElementById('back2').onclick = ()=>{ step=1; showStep(); };
 document.getElementById('next2').onclick = ()=>{ step=3; showStep(); updateTotal(); };
 document.getElementById('back3').onclick = ()=>{ step=2; showStep(); };
-
-function showStep(){
-  document.querySelectorAll('.step').forEach(s=>s.classList.remove('active'));
-  document.getElementById('step'+step).classList.add('active');
-}
+function showStep(){ document.querySelectorAll('.step').forEach(s=>s.classList.remove('active')); document.getElementById('step'+step).classList.add('active'); }
 
 // Guest handling
-document.getElementById('addGuest').onclick = () => {
-  let container = document.getElementById('guestsContainer');
-  let div = document.createElement('div');
-  div.className='person-fields';
-  div.innerHTML = `
-    <h4>Guest</h4>
-    <input class="input guestName" placeholder="Full name" required>
-    <input class="input guestInstagram" placeholder="Instagram handle" required>
-    <select class="input guestGender" required>
-      <option value="">Select gender</option>
-      <option value="Male">Male</option>
-      <option value="Female">Female</option>
-    </select>
-    <button type="button" class="btn secondary removeGuest">Remove</button>
-  `;
+document.getElementById('addGuest').onclick = ()=>{
+  let container=document.getElementById('guestsContainer');
+  let div=document.createElement('div'); div.className='person-fields';
+  div.innerHTML=`<h4>Guest</h4>
+  <input class="input guestName" placeholder="Full name" required>
+  <input class="input guestInstagram" placeholder="Instagram handle" required>
+  <select class="input guestGender" required>
+    <option value="">Select gender</option>
+    <option value="Male">Male</option>
+    <option value="Female">Female</option>
+  </select>
+  <button type="button" class="btn secondary removeGuest">Remove</button>`;
   container.appendChild(div);
-
-  div.querySelector('.removeGuest').onclick = ()=>{
-    div.remove();
-    updateTotal();
-  };
+  div.querySelector('.removeGuest').onclick=()=>{ div.remove(); updateTotal(); };
 };
 
 // Form submission
-document.getElementById('diwaliForm').onsubmit = async (e)=>{
+document.getElementById('diwaliForm').onsubmit=async (e)=>{
   e.preventDefault();
-  let main_name = document.getElementById('main_name').value;
-  let main_instagram = document.getElementById('main_instagram').value;
-  let main_mobile = document.getElementById('main_mobile').value;
-  let main_email = document.getElementById('main_email').value;
-  let main_gender = document.getElementById('main_gender').value;
-  let upiTxn = document.getElementById('upiTxn').value;
-  let totalAmount = updateTotal();
+  let main_name=document.getElementById('main_name').value;
+  let main_instagram=document.getElementById('main_instagram').value;
+  let main_mobile=document.getElementById('main_mobile').value;
+  let main_email=document.getElementById('main_email').value;
+  let main_gender=document.getElementById('main_gender').value;
+  let upiTxn=document.getElementById('upiTxn').value;
+  let totalAmount=updateTotal();
 
-  // Guests data
-  let guestElems = document.querySelectorAll('#guestsContainer .person-fields');
-  let guestData = [];
-  guestElems.forEach((g,i)=>{
-    let name = g.querySelector('.guestName').value;
-    let insta = g.querySelector('.guestInstagram').value;
-    let gender = g.querySelector('.guestGender').value;
-    if(name && insta && gender) guestData.push({name, instagram:insta, gender});
+  let guestElems=document.querySelectorAll('#guestsContainer .person-fields');
+  let guestData=[];
+  guestElems.forEach(g=>{
+    let name=g.querySelector('.guestName').value;
+    let insta=g.querySelector('.guestInstagram').value;
+    let gender=g.querySelector('.guestGender').value;
+    if(name && insta && gender) guestData.push({name,instagram:insta,gender});
   });
 
-  // Screenshot
-  // let screenshotFile = document.getElementById('screenshot').files[0];
-  // if(!screenshotFile){ alert('Please upload payment screenshot'); return; }
-  let reader = new FileReader();
-  reader.onload = async function(){
-    let base64 = reader.result;
+  let screenshotFile=document.getElementById('screenshot').files[0];
+  if(!screenshotFile){ alert('Please upload payment screenshot'); return; }
+  let reader=new FileReader();
+  reader.onload=async function(){
+    let base64=reader.result;
     document.getElementById('loadingOverlay').style.display='flex';
     try{
-      const res = await fetch("https://script.google.com/macros/s/AKfycbwPiFoZvfFdcQZ3S4xWv58I9HdrBBfjlH4yy2AHAO0O8pCr0ZfBAWluSIcNIl5Fx9YFhg/exec", {  // <-- replace with your Apps Script Web App URL
+      const res=await fetch('/api/submit',{
         method:'POST',
-        body: JSON.stringify({
-          main_name, main_instagram, main_mobile, main_email, main_gender,
-          upiTxn, totalAmount,
-          // screenshotBase64: base64,
-          // screenshotName: screenshotFile.name,
-          guests: guestData
+        body:JSON.stringify({
+          main_name,main_instagram,main_mobile,main_email,main_gender,
+          upiTxn,totalAmount,screenshotBase64:base64,screenshotName:screenshotFile.name,
+          guests:guestData
         }),
-        headers:{ 'Content-Type':'application/json' }
+        headers:{'Content-Type':'application/json'}
       });
-      const data = await res.json();
+      const data=await res.json();
       document.getElementById('loadingOverlay').style.display='none';
       if(data.status==='success'){
         document.getElementById('diwaliForm').reset();
-        guests=[];
         document.getElementById('guestsContainer').innerHTML='';
         document.getElementById('totalAmount').innerText='₹0';
+        step=1; showStep();
         showModal();
       }else{
         alert('Error: '+data.message);
@@ -294,6 +249,3 @@ function closeModal(){ document.getElementById('successModal').classList.remove(
 </script>
 </body>
 </html>
-
-
-
