--- a/index.html
+++ b/index.html
@@ -212,38 +212,46 @@ document.getElementById('diwaliForm').onsubmit=async (e)=>{
   let screenshotFile=document.getElementById('screenshot').files[0];
   if(!screenshotFile){ alert('Please upload payment screenshot'); return; }
   let reader=new FileReader();
-  reader.onload=async function(){
-    let base64=reader.result;
-    document.getElementById('loadingOverlay').style.display='flex';
-    try {
-  const res = await fetch("https://script.google.com/macros/s/AKfycbx3-QYImVQGlTdY6J9Plhr72_l-a2t03E3PUx_ZvnZRk4vUsS4ITwqmwFYBqNLEvLKi/exec", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      main_name,
-      main_instagram,
-      main_mobile,
-      main_email,
-      main_gender,
-      totalAmount,
-      upiTxn,
-      screenshotBase64: base64,
-      screenshotName: screenshotFile.name,
-      guests: guestData
-    })
-  });
-  
-  const data = await res.json();
-  if (data.status === "success") {
-    // Success
-  } else {
-    alert("Error: " + data.message);
+  reader.onload = async function() {
+  const base64Screenshot = reader.result; // full base64 string
+  document.getElementById('loadingOverlay').style.display = 'flex';
+
+  try {
+    const res = await fetch("/api/proxy", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        main_name,
+        main_instagram,
+        main_mobile,
+        main_email,
+        main_gender,
+        upiTxn,
+        totalAmount,
+        guests: guestData,
+        screenshotBase64: base64Screenshot,
+        screenshotName: screenshotFile.name
+      })
+    });
+
+    const data = await res.json();
+    document.getElementById('loadingOverlay').style.display = 'none';
+    if (data.status === 'success') {
+      document.getElementById('diwaliForm').reset();
+      guests = [];
+      document.getElementById('guestsContainer').innerHTML = '';
+      document.getElementById('totalAmount').innerText = '₹0';
+      showModal();
+    } else {
+      alert('Error: ' + data.message);
+    }
+  } catch (err) {
+    document.getElementById('loadingOverlay').style.display = 'none';
+    alert('Submission failed: ' + err.message);
   }
-} catch (err) {
-  alert("Submission failed: " + err.message);
-}
-  };
-  reader.readAsDataURL(screenshotFile);
+};
+
+reader.readAsDataURL(screenshotFile);
 };
 
 function showModal(){ document.getElementById('successModal').classList.add('show'); }
@@ -251,5 +259,6 @@ function closeModal(){ document.getElementById('successModal').classList.remove(
 </script>
 </body>
 </html>
+
 
 
