--- a/index.html
+++ b/index.html
@@ -251,11 +251,32 @@ document.getElementById('diwaliForm').onsubmit=async (e)=>{
 reader.readAsDataURL(screenshotFile);
 };
 
+  function resizeImage(file, maxWidth=800, maxHeight=800) {
+  return new Promise((resolve) => {
+    const img = new Image();
+    img.onload = () => {
+      let w = img.width;
+      let h = img.height;
+      if (w > maxWidth) { h = h * (maxWidth/w); w = maxWidth; }
+      if (h > maxHeight) { w = w * (maxHeight/h); h = maxHeight; }
+      const canvas = document.createElement('canvas');
+      canvas.width = w;
+      canvas.height = h;
+      const ctx = canvas.getContext('2d');
+      ctx.drawImage(img, 0, 0, w, h);
+      resolve(canvas.toDataURL('image/png'));
+    };
+    img.src = URL.createObjectURL(file);
+  });
+}
+
+
 function showModal(){ document.getElementById('successModal').classList.add('show'); }
 function closeModal(){ document.getElementById('successModal').classList.remove('show'); }
 </script>
 </body>
 </html>
+
 
 
 
