--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@ header a{ color:var(--dark-gold); text-decoration:none; font-weight:600; }
 
 .container{ max-width:760px; margin:28px auto; padding:0 18px; }
 .details-box{ background:#fff; border:1px solid var(--border); border-radius:12px; padding:22px 26px; box-shadow:0 6px 18px rgba(0,0,0,0.04); color:#4b4036; margin-bottom:22px; }
-.details-box ul{ margin:8px 0 0 18px; padding:0; color:#4b4036; }
 .details-grid{ display:flex; gap:12px; flex-wrap:wrap; margin-top:14px; }
 .detail-pill{ background:linear-gradient(180deg,#fffaf3,#fff6ea); border:1px solid var(--border); padding:10px 12px; border-radius:10px; font-weight:600; color:#6e543b; box-shadow:0 2px 8px rgba(0,0,0,0.03); }
 
@@ -34,14 +33,12 @@ form{ background:#fff; border-radius:12px; border:1px solid var(--border); box-s
 h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16px; font-size:1.6rem; }
 .input, select{ width:86%; max-width:460px; padding:12px 14px; margin:10px auto; display:block; border-radius:8px; border:1px solid var(--border); background:#fff; font-size:1rem; }
 .input:focus, select:focus{ outline:none; border-color:var(--gold); box-shadow:0 0 0 5px rgba(216,179,132,0.12); }
-.small{ font-size:.92rem; color:#6b5b4b; margin-top:6px; }
 .person-fields{ background:#fffaf7; border:1px solid var(--border); border-radius:10px; padding:12px; width:86%; margin:12px auto; text-align:left; }
-.person-fields h4{ margin:0 0 8px; font-size:1rem; color:#6e543b; }
 .controls{ display:flex; justify-content:center; gap:12px; margin-top:10px; flex-wrap:wrap; }
 .btn{ background:var(--gold); color:#fff; padding:10px 20px; border-radius:8px; border:none; cursor:pointer; font-weight:600; transition:all .18s; }
 .btn.secondary{ background:#fff; color:var(--dark-gold); border:1px solid var(--border); }
 .btn:hover{ transform:translateY(-3px); box-shadow:0 6px 18px rgba(0,0,0,0.06); }
-.summary{ margin:14px auto 4px; font-weight:700; color:#7a4f34; }
+
 #qr{ width:200px; margin:14px auto; border-radius:8px; border:1px solid var(--border); display:block; }
 #loadingOverlay{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.4);z-index:9999;justify-content:center;align-items:center;}
 #loadingOverlay div{width:60px;height:60px;border:6px solid #f3f3f3;border-top:6px solid #d8b384;border-radius:50%;animation:spin 1s linear infinite;}
@@ -61,24 +58,15 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
 <header>
   <h1>✨ Diwali Night: A Night Under The Sky ✨</h1>
   <p><strong>Jaipur After Hours x The Forresta</strong></p>
-  <p class="header-note">📍 <a href="https://maps.app.goo.gl/V9sfvTeTSCVdNRBR9" target="_blank">The Forresta, Jaipur</a>  &nbsp; | &nbsp; 📅 17th October  &nbsp; | &nbsp; 👗 Ethnic</p>
+  <p class="header-note">📍 <a href="https://maps.app.goo.gl/V9sfvTeTSCVdNRBR9" target="_blank" rel="noopener">The Forresta, Jaipur</a>  &nbsp; | &nbsp; 📅 17th October  &nbsp; | &nbsp; 👗 Ethnic</p>
 </header>
 
 <div class="container">
   <div class="details-box">
-    <div style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
-      <div>
-        <ul>
-          <li>💃 Desi beats & elegant fits</li>
-          <li>🔥 Fire dance floors</li>
-          <li>🌌 Celebrate Diwali under the stars</li>
-        </ul>
-      </div>
-      <div class="details-grid">
-        <div class="detail-pill">👨 Male Stag • ₹2000</div>
-        <div class="detail-pill">👩 Female Stag • ₹1500</div>
-        <div class="detail-pill">💑 Couple • ₹2500</div>
-      </div>
+    <div class="details-grid" style="justify-content:center">
+      <div class="detail-pill">👨 Male Stag • ₹2000</div>
+      <div class="detail-pill">👩 Female Stag • ₹1500</div>
+      <div class="detail-pill">💑 Couple • ₹2500</div>
     </div>
   </div>
 
@@ -117,7 +105,7 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
     <div class="step" id="step3">
       <h2>Payment</h2>
       <p class="small">Scan QR or UPI and upload screenshot.</p>
-      <img id="qr" src="Diwali Party QR Code.jpg" alt="Scan to pay via UPI">
+      <img id="qr" src="qr.png" alt="Scan to pay via UPI">
       <input type="file" accept="image/*" id="screenshot" required>
       <input class="input" id="upiTxn" placeholder="UPI Transaction ID" required>
       <div class="summary">Total Amount: <span id="totalAmount">₹0</span></div>
@@ -142,55 +130,59 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
 <script>
 let step = 1;
 
-function updateTotal() {
-  let mainGender = document.getElementById('main_gender').value;
-  let males = 0, females = 0;
-  if(mainGender==='Male') males++; else if(mainGender==='Female') females++;
-
-  let guestElems = document.querySelectorAll('#guestsContainer .person-fields');
-  guestElems.forEach(g=>{
-    let gender = g.querySelector('.guestGender').value;
-    if(gender==='Male') males++; else if(gender==='Female') females++;
-  });
-
-  let couples = Math.min(males,females);
-  let remainingMales = males-couples;
-  let remainingFemales = females-couples;
-  let total = couples*2500 + remainingMales*2000 + remainingFemales*1500;
-
-  document.getElementById('totalAmount').innerText = `💰 ₹${total} — Couples: ${couples}, Single Males: ${remainingMales}, Single Females: ${remainingFemales}`;
-  return total;
-}
-
 // Step navigation
-document.getElementById('next1').onclick = ()=>{ 
-  if(!document.getElementById('main_name').value || !document.getElementById('main_instagram').value || !document.getElementById('main_mobile').value || !document.getElementById('main_email').value || !document.getElementById('main_gender').value){ alert('Please fill all fields'); return; }
+function showStep(){
+  document.querySelectorAll('.step').forEach(s=>s.classList.remove('active'));
+  document.getElementById('step'+step).classList.add('active');
+}
+document.getElementById('next1').onclick = ()=>{
+  if(!document.getElementById('main_name').value || !document.getElementById('main_instagram').value || !document.getElementById('main_mobile').value || !document.getElementById('main_email').value || !document.getElementById('main_gender').value){
+    alert('Please fill all fields'); return;
+  }
   step=2; showStep(); updateTotal();
 };
 document.getElementById('back2').onclick = ()=>{ step=1; showStep(); };
 document.getElementById('next2').onclick = ()=>{ step=3; showStep(); updateTotal(); };
 document.getElementById('back3').onclick = ()=>{ step=2; showStep(); };
-function showStep(){ document.querySelectorAll('.step').forEach(s=>s.classList.remove('active')); document.getElementById('step'+step).classList.add('active'); }
 
-// Guest handling
-document.getElementById('addGuest').onclick = ()=>{
-  let container=document.getElementById('guestsContainer');
-  let div=document.createElement('div'); div.className='person-fields';
-  div.innerHTML=`<h4>Guest</h4>
-  <input class="input guestName" placeholder="Full name" required>
-  <input class="input guestInstagram" placeholder="Instagram handle" required>
-  <select class="input guestGender" required>
-    <option value="">Select gender</option>
-    <option value="Male">Male</option>
-    <option value="Female">Female</option>
-  </select>
-  <button type="button" class="btn secondary removeGuest">Remove</button>`;
+// Guests
+document.getElementById('addGuest').onclick = () => {
+  let container = document.getElementById('guestsContainer');
+  let div = document.createElement('div');
+  div.className='person-fields';
+  div.innerHTML = `
+    <h4>Guest</h4>
+    <input class="input guestName" placeholder="Full name" required>
+    <input class="input guestInstagram" placeholder="Instagram handle" required>
+    <select class="input guestGender" required>
+      <option value="">Select gender</option>
+      <option value="Male">Male</option>
+      <option value="Female">Female</option>
+    </select>
+    <button type="button" class="btn secondary removeGuest">Remove</button>
+  `;
   container.appendChild(div);
-  div.querySelector('.removeGuest').onclick=()=>{ div.remove(); updateTotal(); };
+  div.querySelector('.removeGuest').onclick = ()=>{ div.remove(); updateTotal(); };
 };
 
+// Total calculation
+function updateTotal(){
+  let mainGender = document.getElementById('main_gender').value;
+  let males = 0, females = 0;
+  if(mainGender==='Male') males++; else if(mainGender==='Female') females++;
+  document.querySelectorAll('.guestGender').forEach(g=>{
+    if(g.value==='Male') males++; else if(g.value==='Female') females++;
+  });
+  let couples = Math.min(males,females);
+  let remainingMales = males-couples;
+  let remainingFemales = females-couples;
+  let total = couples*2500 + remainingMales*2000 + remainingFemales*1500;
+  document.getElementById('totalAmount').innerText = `💰 ₹${total} — Couples: ${couples}, Male: ${remainingMales}, Female: ${remainingFemales}`;
+  return total;
+}
+
 // Form submission
-document.getElementById('diwaliForm').onsubmit=async (e)=>{
+document.getElementById('diwaliForm').onsubmit = async (e)=>{
   e.preventDefault();
   let main_name=document.getElementById('main_name').value;
   let main_instagram=document.getElementById('main_instagram').value;
@@ -198,98 +190,44 @@ document.getElementById('diwaliForm').onsubmit=async (e)=>{
   let main_email=document.getElementById('main_email').value;
   let main_gender=document.getElementById('main_gender').value;
   let upiTxn=document.getElementById('upiTxn').value;
-  let totalAmount=updateTotal();
+  let totalAmount = updateTotal();
 
-  let guestElems=document.querySelectorAll('#guestsContainer .person-fields');
-  let guestData=[];
-  guestElems.forEach(g=>{
-    let name=g.querySelector('.guestName').value;
-    let insta=g.querySelector('.guestInstagram').value;
-    let gender=g.querySelector('.guestGender').value;
-    if(name && insta && gender) guestData.push({name,instagram:insta,gender});
+  let guests = [];
+  document.querySelectorAll('.person-fields').forEach(g=>{
+    let name = g.querySelector('.guestName').value;
+    let insta = g.querySelector('.guestInstagram').value;
+    let gender = g.querySelector('.guestGender').value;
+    if(name && insta && gender) guests.push({name, instagram:insta, gender});
   });
 
-  let screenshotFile=document.getElementById('screenshot').files[0];
-  if(!screenshotFile){ alert('Please upload payment screenshot'); return; }
+  let screenshotFile = document.getElementById('screenshot').files[0];
+  if(!screenshotFile){ alert('Upload payment screenshot'); return; }
 
-const screenshotBase64 = await resizeImage(screenshotFile, 800, 800);
-  
-  let reader=new FileReader();
-  reader.onload = async function() {
-  const base64 = reader.result;
-
-  document.getElementById('loadingOverlay').style.display='flex';
-  try {
-    const res = await fetch("/api/submit", {
-  method: "POST",
-  headers: { "Content-Type": "application/json" },
-  body: JSON.stringify({
-    main_name,
-    main_instagram,
-    main_mobile,
-    main_email,
-    main_gender,
-    upiTxn,
-    totalAmount,
-    guests: guestData,
-    screenshotBase64,
-    screenshotName: screenshotFile.name
-  })
-});
-
-    const data = await res.json();
-    document.getElementById('loadingOverlay').style.display='none';
-
-    if (data.status === 'success') {
-      document.getElementById('diwaliForm').reset();
-      guests = [];
-      document.getElementById('guestsContainer').innerHTML='';
-      document.getElementById('totalAmount').innerText='₹0';
-      showModal();
-    } else {
-      alert('Error: '+data.message || 'Submission failed');
-    }
-
-  } catch(err) {
-    document.getElementById('loadingOverlay').style.display='none';
-    alert('Submission failed: '+err.message);
-  }
+  let reader = new FileReader();
+  reader.onload = async function(){
+    try{
+      let res = await fetch('https://script.google.com/macros/s/AKfycbx3-QYImVQGlTdY6J9Plhr72_l-a2t03E3PUx_ZvnZRk4vUsS4ITwqmwFYBqNLEvLKi/exec',{
+        method:'POST',
+        headers:{'Content-Type':'application/json'},
+        body: JSON.stringify({
+          main_name, main_instagram, main_mobile, main_email, main_gender,
+          upiTxn, totalAmount, guests, screenshotBase64: reader.result
+        })
+      });
+      let data = await res.json();
+      if(data.status==='success'){
+        document.getElementById('diwaliForm').reset();
+        document.getElementById('guestsContainer').innerHTML='';
+        document.getElementById('totalAmount').innerText='₹0';
+        showModal();
+      }else alert('Error: '+data.message);
+    }catch(err){ alert('Submission failed: '+err.message); }
+  };
+  reader.readAsDataURL(screenshotFile);
 };
-
-
-reader.readAsDataURL(screenshotFile);
-};
-
-  function resizeImage(file, maxWidth=800, maxHeight=800) {
-  return new Promise((resolve) => {
-    const img = new Image();
-    img.onload = () => {
-      let w = img.width;
-      let h = img.height;
-      if (w > maxWidth) { h = h * (maxWidth/w); w = maxWidth; }
-      if (h > maxHeight) { w = w * (maxHeight/h); h = maxHeight; }
-      const canvas = document.createElement('canvas');
-      canvas.width = w;
-      canvas.height = h;
-      const ctx = canvas.getContext('2d');
-      ctx.drawImage(img, 0, 0, w, h);
-      resolve(canvas.toDataURL('image/png'));
-    };
-    img.src = URL.createObjectURL(file);
-  });
-}
-
 
 function showModal(){ document.getElementById('successModal').classList.add('show'); }
 function closeModal(){ document.getElementById('successModal').classList.remove('show'); }
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
