--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
     <div class="step" id="step3">
       <h2>Payment</h2>
       <p class="small">Scan QR or UPI and upload screenshot.</p>
-      <img id="qr" src="qr.png" alt="Scan to pay via UPI">
+      <img id="qr" src="qr.jpg" alt="Scan to pay via UPI">
       <input type="file" accept="image/*" id="screenshot" required>
       <input class="input" id="upiTxn" placeholder="UPI Transaction ID" required>
       <div class="summary">Total Amount: <span id="totalAmount">₹0</span></div>
@@ -231,3 +231,4 @@ function closeModal(){ document.getElementById('successModal').classList.remove(
 </script>
 </body>
 </html>
+
