--- a/index.html
+++ b/index.html
@@ -137,7 +137,13 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
     </div>
   </form>
 
-  <div id="successMsg">✅ Registration received — thank you! We'll contact you with confirmation.</div>
+  <div id="successPopup" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,0.5); z-index:9999; justify-content:center; align-items:center;">
+  <div style="background:#fff; padding:24px 32px; border-radius:12px; text-align:center; max-width:320px; box-shadow:0 8px 24px rgba(0,0,0,0.2);">
+    <h2 style="color:green; margin-bottom:12px;">✅ Registration Successful!</h2>
+    <p>Thank you! We have received your registration.</p>
+    <button id="closePopup" style="margin-top:16px; padding:10px 20px; border:none; border-radius:8px; background:#d8b384; color:#fff; cursor:pointer;">Close</button>
+  </div>
+</div>
 </div>
 
 <script>
@@ -334,7 +340,8 @@ document.getElementById('diwaliForm').addEventListener('submit', async function(
     }
 
     // ✅ Show success animation/message
-    document.getElementById('successMsg').style.display = 'block';
+    document.getElementById('successPopup').style.display = 'flex';
+  
     setTimeout(() => {
       document.getElementById('diwaliForm').reset();
       document.getElementById('peopleContainer').innerHTML = '';
