--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
         <ul>
           <li> EAT|DANCE|SHINE|REPEAT</li>
           <li> Fire dance floors</li>
-          <li> It's Diwali done the Zenscape way!</li>
+          <li> A night under the sky!</li>
         </ul>
       </div>
       <div class="details-grid" style="align-items:center">
