--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
       <select class="input" id="main_reference" required>
         <option value="">How did you hear about us?</option>
         <option value="Jaipur After Hours">Jaipur After Hours</option>
-        <option value="Zenscape">Zenscape</option>
-        <option value="Ignite Jaipur">Ignite Jaipur</option>
+        <option value="Zenscape">Ignite Jaipur</option>
+        <option value="Ignite Jaipur">Zenscape</option>
         <option value="Other">Other</option>
       </select>
       
